package com.csl.visitor;

/**
 * @author MaoLongLong
 * @date 2021-04-28 19:51
 */
public interface UnitVisitor {

    void visit(Unit unit);
}
